# SPARMVET_VIZ

./: .aiignore  .clinerules  .dockerignore  .gitignore  AGENT_GUIDE.md  README.md  SPARMVET_VIZ.code-workspace  aiignore  pyproject.toml  tree.txt
libs/generator_utils/: README.md  pyproject.toml
libs/generator_utils/src/generator_utils/: aqua_synthesizer.py  bootstrapper.py  extractor.py  reconciler.py
libs/generator_utils/tests/: debug_ambiguity.py  debug_reconciler.py  debug_sdk.py  demo_reconciler.py  test_sdk.py
libs/transformer/: README.md  pyproject.toml
libs/transformer/src/: data_wrangler.py  registry.py
libs/transformer/src/actions/: __init__.py  base.py
libs/transformer/src/actions/advanced/: __init__.py  categories.py  regex.py
libs/transformer/src/actions/cleaning/: __init__.py  advanced.py  core.py
libs/transformer/src/placeholder/: example_metadata_mgr.py
libs/transformer/src/transformer/: __init__.py  data_assembler.py  data_wrangler.py  lookup.py  metadata_validator.py  pipeline.py  registry.py
libs/transformer/tests/: README.md  assembler_debug.py  debug_assembler.py  debug_decorator_suite.py  debug_expressions.py  debug_phase3_refinements.py  debug_pipeline.py  debug_relational_audit.py  debug_wrangler.py  debug_wrangler_errors.py  test_decorator_suite.py  test_wrangler.py  transformer_integrity_suite.py  wrangler_debug.py
libs/transformer/tests/data/: add_constant_manifest.yaml  add_constant_test.tsv  all_horizontal_manifest.yaml  all_horizontal_test.tsv  any_horizontal_manifest.yaml  any_horizontal_test.tsv  cast_manifest.yaml  cast_test.tsv  coalesce_manifest.yaml  coalesce_test.tsv  count_by_group_manifest.yaml  count_by_group_test.tsv  cum_count_manifest.yaml  cum_sum_manifest.yaml  date_extract_manifest.yaml  date_extract_test.tsv  date_truncate_manifest.yaml  date_truncate_test.tsv  derive_categories_manifest.yaml  derive_categories_test.tsv  describe_stats_manifest.yaml  divide_columns_manifest.yaml  divide_columns_test.tsv  drop_columns_manifest.yaml  drop_duplicates_manifest.yaml  drop_duplicates_test.csv  drop_duplicates_test.tsv  drop_nulls_manifest.yaml  drop_nulls_test.tsv  explode_manifest.yaml  explode_test.tsv  expressions_test.tsv  expressions_test.yaml  fg_genotypes.tsv  fg_metadata.tsv  fg_phenotypes.tsv  fill_nulls_direction_manifest.yaml  fill_nulls_direction_test.tsv  fill_nulls_manifest.yaml  fill_nulls_test.tsv  (+84 more)
libs/viz_factory/: README.md  pyproject.toml
libs/viz_factory/src/: __init__.py  bar_logic.py  base.py  example_plot_factory.py  registry.py  viz_factory.py
libs/viz_factory/src/facets/: core.py
libs/viz_factory/src/geoms/: core.py
libs/viz_factory/src/guides/: __init__.py  core.py
libs/viz_factory/src/scales/: core.py
libs/viz_factory/src/themes/: core.py
libs/viz_factory/src/viz_factory/: registry.py  viz_factory.py
libs/viz_factory/tests/: README.md  bulk_debug_viz_factory_layers.py  debug_audit.py  debug_bulk_sync.py  debug_distiller.py  debug_gallery.py  debug_runner.py  debug_viz.py  debug_viz_factory_audit.py  debug_viz_factory_tier3.py  test_deco2_components.py  test_runner.py  viz_debug.py  viz_factory_integrity_suite.py
libs/viz_factory/tests/test_data/: annotate_test.yaml  boxplot_test_data.tsv  coord_cartesian_test.yaml  coord_default_test.yaml  coord_equal_test.yaml  coord_fixed_test.yaml  coord_flip_test.yaml  coord_lims_test.yaml  coord_trans_test.yaml  date_test_data.tsv  element_blank_test.yaml  element_line_test.yaml  element_rect_test.yaml  element_text_test.yaml  facet_cols_test.yaml  facet_grid_test.yaml  facet_labeller_test.yaml  facet_margins_test.yaml  facet_null_test.yaml  facet_rows_test.yaml  facet_scales_test.yaml  facet_space_test.yaml  facet_test_data.tsv  facet_wrap_test.yaml  geom_abline_test.yaml  geom_area_test.yaml  geom_bar_test.tsv  geom_bar_test.yaml  geom_bin_2d_test.yaml  geom_blank_test.yaml  geom_boxplot_test.tsv  geom_boxplot_test.yaml  geom_col_test.tsv  geom_col_test.yaml  geom_count_test.yaml  geom_crossbar_test.yaml  geom_density_2d_test.yaml  geom_density_test.tsv  geom_density_test.yaml  geom_dotplot_test.yaml  (+176 more)
libs/viz_gallery/: README.md  pyproject.toml
libs/viz_gallery/assets/: generate_previews.py  refresh_gallery.py
libs/viz_gallery/src/viz_gallery/: gallery_manager.py
libs/viz_gallery/tests/: debug_gallery_submission.py  debug_gallery_ui_logic.py
libs/viz_gallery/tests/data/: example_data.tsv  recipe_manifest.yaml
(+948 files in other folders)
