[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SPARMVET_VIZ"
version = "0.1.0"
dependencies = [
    "polars>=1.0.0",
    "shiny>=1.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "plotnine>=0.14.0",
    "fastexcel>=0.11.0",
    "requests>=2.28.0",
    "jinja2>=3.0.0",
    "pyarrow>=15.0.0",
]

# [tool.ruff]
# line-length = 100
# select = ["E", "F", "I", "N"]

# [tool.ruff.isort]
# known-first-party = ["data_prep", "viz_core"]
