[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generator_utils"
version = "0.1.0"
dependencies = [
    "polars>=1.0.0",
    "openpyxl>=3.0.0",
    "ruamel.yaml>=0.17.0"
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["generator_utils"]
