[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generator_utils"
version = "0.1.0"
description = "SPARMVET_VIZ generator_utils library"
dependencies = [
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
