[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.1.0"
description = "SPARMVET_VIZ transformer library"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
